docs: actualizar documentacion y esquemas de arquitectura modular de backend y frontend